<resources>
    <string name="app_name">Wi-Finder</string>
    <string name="title_activity_view_location">Pogled na zemljevidu</string>

    <!--RESOURCE STRINGS-->
    <string name="activityNotFound">Ni bilo najdenega primernega Activitiya</string>
    <string name="loadSuccess">Uspešno preneseno z datoteke</string>
    <string name="loadFailure">Neuspeh pri prenosu z datoteke</string>
    <string name="saveSuccess">Uspešno shranjeno na datoteko</string>
    <string name="saveFailure">Neuspeh pri shranjevanju na datoteko</string>
    <string name="fileNotFound">Datoteka ni bila najdena!</string>
    <string name="loginFailure">Vpis neuspešen</string>
    <string name="welcome">Dobrodošli</string>
    <string name="marketUri">market://search?q=pname:</string>
    <string name="zxingUri">com.google.zxing.client.android</string>
    <string name="zxingNotFound">Zxing ni bil najden</string>
    <string name="zxingDownload">Prenesite Xzing zdaj?</string>
    <string name="connectionRequired">Za vpis potrebujete spletno povezavo</string>
    <string name="gpsRequired">To dejanje potrebuje vašo lokacijo</string>
    <string name="enableGps">Ali želite omogočiti GPS?</string>
    <string name="gpsFailure">Failed to acquire location using GPS</string>
    <string name="gpsSignalNotAcquired">GPS signal ni na voljo (zaenkrat)</string>

    <string name="dctAlgorithm">DCT Stiskanje</string>
    <string name="startDct">Compress using DCT</string>

    <string name="yes">Da</string>
    <string name="no">Ne</string>

    <string name="showExtrasString">Dodatno</string>
    <string name="playString">Play</string>

    <string name="accessibilityString">Dostopnost</string>
    <string name="publicAccess">Odprto omrežje</string>
    <string name="secureAccess">Potrebno geslo</string>
    <string name="loginAccess">Potreben vpis</string>
    <string name="inaccessibleAccess">Javno nedostopno</string>
    <string name="privateAccess">Zasebno omrežje</string>

    <!-- NE UPORABLJAJ TEH VREDNOSTI ZA VPIS V ARFF DATOTEKO -->
    <string name="noAccessRating">Ni dostopa</string>
    <string name="badRating">Slabo</string>
    <string name="okRating">OK</string>
    <string name="goodRating">Dobro</string>
    <string name="greatRating">Odlično</string>

    <!-- SE LAHKO UPORABLJAJO Z ARFF DATOTEKO -->
    <string name="noAccessRatingARFF">no_access</string>
    <string name="badRatingARFF">bad</string>
    <string name="okRatingARFF">OK</string>
    <string name="goodRatingARFF">good</string>
    <string name="greatRatingARFF">great</string>

    <string name="internalError">Notranja napaka</string>

    <string name="scan">Skeniraj</string>
    <string name="add">Dodaj</string>

    <string name="ssid">SSID</string>
    <string name="password">Geslo</string>
    <string name="noPassWordRequired">Geslo ni potrebno</string>
    <string name="passwordInaccessible">Ni dostopno</string>

    <string name="loading">Nalagam&#8230;</string>
    <string name="ReverseGeoCodingFailed">Nisem uspel najti naslova&#8230; :(</string>

    <string name="save">Shrani</string>
    <string name="numOfPoints">Št. Točk:</string>

    <string name="rating">Ocena</string>

    <string-array name="accessibility">
        <item>@string/publicAccess</item>
        <item>@string/secureAccess</item>
        <item>@string/loginAccess</item>
        <item>@string/inaccessibleAccess</item>
        <item>@string/privateAccess</item>
    </string-array>

    <string-array name="ratingsArray">
        <item>@string/noAccessRating</item>
        <item>@string/badRating</item>
        <item>@string/okRating</item>
        <item>@string/goodRating</item>
        <item>@string/greatRating</item>
    </string-array>
</resources>
