<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="um.feri.mihael.wi_finder.AddNewActivity">

    <!-- Spremenjeno 09.01.2017 -->
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="um.feri.mihael.wi_finder.AddNewActivity"
        android:id="@+id/tableLayoutAdd">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssid"
                android:id="@+id/addTextViewLabelSSID" />

            <EditText
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addEditTextSSID"
                android:minWidth="250dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/addTextViewLabelSecKey" />

            <EditText
                android:inputType="textVisiblePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addEditTextSecKey"
                android:minWidth="250dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:id="@+id/activityAddNewSpinnerRatingLabel" />

            <Spinner
                android:id="@+id/activityAddNewSpinnerRating"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accessibilityString"
                android:id="@+id/activityAddNewSpinnerAccessLabel" />

            <Spinner
                android:id="@+id/activityAddNewSpinnerAccess"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tableLayoutAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:id="@+id/buttonScan" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/buttonAdd" />
    </LinearLayout>
</RelativeLayout>